--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "name": "flight-price-api",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "netlify-cli": "^15.3.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
