--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "netlify-cli": "^15.3.1"
   },
   "scripts": {
+    "start" : "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
