--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
     "nodemon": "^2.0.22"
   },
   "name": "flight-price-api",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {
-  
-  },
   "scripts": {
-    "start" : "node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
